--- a/scss/_gui.scss
+++ b/scss/_gui.scss
@@ -119,7 +119,6 @@ input[type="text"], input[type="search"], textarea
 input[type="text"], input[type="search"]
 {
   line-height: $spacing-vertical - 4;
-  height: $spacing-vertical * 1.5;
 }
 
 .busy-indicator
